tests/golden/type_errors/struct_method_return_mismatch.cd
struct Person { name: string }

impl Person {
  fun bad(): number { return this.name; }
}
